fix css hidden overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 * {
   box-sizing: border-box;
-  overflow: hidden;
+  height: 100%;
 }
 
 html {
@@ -15,4 +15,5 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow-y: hidden;
 }
