--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+}
+
+html {
+  margin: 0;
+}
+
+body {
+  overflow-y: hidden;
+}
